// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiPopover children is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  id="1"
>
  <div
    class="euiPopover__anchor"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiPopover euiPopover--anchorDownCenter testClass1 testClass2"
  data-test-subj="test subject string"
  id="0"
>
  <div
    class="euiPopover__anchor"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover props anchorPosition defaults to centerDown 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  id="4"
>
  <div
    class="euiPopover__anchor"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover props anchorPosition downRight is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownRight"
  id="6"
>
  <div
    class="euiPopover__anchor"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover props anchorPosition leftCenter is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorLeftCenter"
  id="5"
>
  <div
    class="euiPopover__anchor"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover props isOpen defaults to false 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  id="7"
>
  <div
    class="euiPopover__anchor"
  >
    <button />
  </div>
</div>
`;

exports[`EuiPopover props isOpen renders true 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  id="8"
>
  <div
    class="euiPopover__anchor"
  >
    <button />
  </div>
  <div>
    <div
      aria-live="assertive"
      class="euiPanel euiPanel--paddingMedium euiPanel--shadow euiPopover__panel euiPopover--anchorDownCenter"
      style="top:50px;left:50px"
    >
      <div
        class="euiPopover__panel__arrow euiPopover__panel__arrow-null"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPopover props ownFocus defaults to false 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  id="9"
>
  <div
    class="euiPopover__anchor"
  >
    <button />
  </div>
  <div>
    <div
      aria-live="assertive"
      class="euiPanel euiPanel--paddingMedium euiPanel--shadow euiPopover__panel euiPopover--anchorDownCenter"
      style="top:50px;left:50px"
    >
      <div
        class="euiPopover__panel__arrow euiPopover__panel__arrow-null"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPopover props ownFocus renders true 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  id="10"
>
  <div
    class="euiPopover__anchor"
  >
    <button />
  </div>
  <div>
    <p
      class="euiScreenReaderOnly"
      role="alert"
    >
      You are in a popup menu. To exit this menu hit escape.
    </p>
    <div
      aria-live="off"
      class="euiPanel euiPanel--paddingMedium euiPanel--shadow euiPopover__panel euiPopover--anchorDownCenter"
      style="top:50px;left:50px"
      tabindex="0"
    >
      <div
        class="euiPopover__panel__arrow euiPopover__panel__arrow-null"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPopover props panelClassName is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  id="11"
>
  <div
    class="euiPopover__anchor"
  >
    <button />
  </div>
  <div>
    <div
      aria-live="assertive"
      class="euiPanel euiPanel--paddingMedium euiPanel--shadow euiPopover__panel euiPopover--anchorDownCenter test"
      style="top:50px;left:50px"
    >
      <div
        class="euiPopover__panel__arrow euiPopover__panel__arrow-null"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPopover props panelPaddingSize is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter"
  id="12"
>
  <div
    class="euiPopover__anchor"
  >
    <button />
  </div>
  <div>
    <div
      aria-live="assertive"
      class="euiPanel euiPanel--paddingSmall euiPanel--shadow euiPopover__panel euiPopover--anchorDownCenter"
      style="top:50px;left:50px"
    >
      <div
        class="euiPopover__panel__arrow euiPopover__panel__arrow-null"
      />
    </div>
  </div>
</div>
`;

exports[`EuiPopover props withTitle is rendered 1`] = `
<div
  class="euiPopover euiPopover--anchorDownCenter euiPopover--withTitle"
  id="2"
>
  <div
    class="euiPopover__anchor"
  >
    <button />
  </div>
</div>
`;
